# gpu-font-rendering

./: .gitmodules  CMakeLists.txt  license.txt  readme.md
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/include/: defer.hpp
shaders/: background.frag  background.vert  basic.frag  basic.vert  font.frag  font.vert
source/: font.cpp  glm.hpp  main.cpp  shader_catalog.cpp  shader_catalog.hpp
